generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum ReservationStatus {
  PENDENTE
  CONFIRMADA
  CANCELADA
  CHECKIN_REALIZADO
  CHECKOUT_REALIZADO
}

enum ReservationType {
  CASA
  QUARTO
  CAMA
}

enum CleaningType {
  PRE_CHECKIN
  POS_CHECKOUT
  RECORRENTE
  MANUTENCAO
}

enum TaskStatus {
  PENDENTE
  EM_ANDAMENTO
  CONCLUIDA
  CANCELADA
}

enum InventoryCategory {
  MOBILIARIO
  UTENSILIOS
  ELETRODOMESTICOS
  ROUPA_CAMA
  DECORACAO
}

enum ItemCondition {
  INTEGRO
  DANIFICADO
  FALTANDO
  EM_MANUTENCAO
  SUBSTITUIR
}

enum TravelMode {
  AEREO
  TERRESTRE
}

enum TransferStatus {
  PENDENTE
  CONFIRMADO
  REALIZADO
  CANCELADO
}

enum UtilityType {
  LUZ
  GAS
}

enum LaundryStatus {
  SUJA
  EM_LAVAGEM
  LAVADA
  PRONTA
}

enum RoleName {
  ADMIN
  RECEPCAO_OPERACOES
  LIMPEZA_MANUTENCAO
  FINANCEIRO
}

model House {
  id          String   @id @default(uuid())
  name        String
  capacity    Int
  notes       String?
  rooms       Room[]
  reservations Reservation[]
  cleaningTasks CleaningTask[]
  inventoryItems InventoryItem[]
  utilityReadings UtilityReading[]
  laundryOrders LaundryOrder[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Room {
  id        String   @id @default(uuid())
  houseId   String
  name      String
  capacity  Int
  notes     String?
  house     House    @relation(fields: [houseId], references: [id])
  beds      Bed[]
  reservations Reservation[]
  cleaningTasks CleaningTask[]
  inventoryItems InventoryItem[]
  laundryOrders LaundryOrder[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([houseId])
}

model Bed {
  id        String   @id @default(uuid())
  roomId    String
  name      String
  capacity  Int
  notes     String?
  room      Room     @relation(fields: [roomId], references: [id])
  reservations Reservation[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([roomId])
}

model Reservation {
  id          String            @id @default(uuid())
  type        ReservationType
  status      ReservationStatus
  startAt     DateTime
  endAt       DateTime
  guestName   String
  price       Decimal?
  paymentMethod String?
  houseId     String?
  roomId      String?
  bedId       String?
  house       House?            @relation(fields: [houseId], references: [id])
  room        Room?             @relation(fields: [roomId], references: [id])
  bed         Bed?              @relation(fields: [bedId], references: [id])
  cleaningTasks CleaningTask[]
  checklistEntries ChecklistEntry[]
  arrivalDeparture ArrivalDeparture?
  utilityReadings UtilityReading[]
  laundryOrders LaundryOrder[]
  auditLogs    AuditLog[]
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt

  @@index([type, status, startAt, endAt])
  @@index([houseId, startAt, endAt])
  @@index([roomId, startAt, endAt])
  @@index([bedId, startAt, endAt])
}

model CleaningTask {
  id            String      @id @default(uuid())
  type          CleaningType
  status        TaskStatus
  scheduledAt   DateTime
  responsible   String
  notes         String?
  reservationId String?
  houseId       String?
  roomId        String?
  reservation   Reservation? @relation(fields: [reservationId], references: [id])
  house         House?       @relation(fields: [houseId], references: [id])
  room          Room?        @relation(fields: [roomId], references: [id])
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  @@index([scheduledAt])
  @@index([houseId])
  @@index([roomId])
}

model InventoryItem {
  id            String           @id @default(uuid())
  category      InventoryCategory
  name          String
  quantity      Int
  condition     ItemCondition
  replacementValue Decimal?
  houseId       String?
  roomId        String?
  house         House?           @relation(fields: [houseId], references: [id])
  room          Room?            @relation(fields: [roomId], references: [id])
  checklistEntries ChecklistEntry[]
  createdAt     DateTime         @default(now())
  updatedAt     DateTime         @updatedAt

  @@index([houseId])
  @@index([roomId])
}

model ChecklistEntry {
  id            String        @id @default(uuid())
  reservationId String
  inventoryItemId String
  stateCheckin  ItemCondition
  stateCheckout ItemCondition?
  notes         String?
  reservation   Reservation  @relation(fields: [reservationId], references: [id])
  inventoryItem InventoryItem @relation(fields: [inventoryItemId], references: [id])
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  @@index([reservationId])
}

model ArrivalDeparture {
  id             String       @id @default(uuid())
  reservationId  String       @unique
  mode           TravelMode
  carrier        String?
  number         String?
  locator        String?
  origin         String?
  destination    String?
  arrivalAt      DateTime?
  departureAt    DateTime?
  transferIn     Boolean      @default(false)
  transferOut    Boolean      @default(false)
  transferInDriver String?
  transferInVehicle String?
  transferInContact String?
  transferInStatus TransferStatus?
  transferOutDriver String?
  transferOutVehicle String?
  transferOutContact String?
  transferOutStatus TransferStatus?
  reservation    Reservation @relation(fields: [reservationId], references: [id])
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
}

model UtilityReading {
  id            String      @id @default(uuid())
  reservationId String
  houseId       String
  type          UtilityType
  meterId       String
  startReading  Decimal
  endReading    Decimal
  unit          String
  tariff        Decimal
  consumption   Decimal
  cost          Decimal
  startAt       DateTime
  endAt         DateTime
  reservation   Reservation @relation(fields: [reservationId], references: [id])
  house         House       @relation(fields: [houseId], references: [id])
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt

  @@index([houseId, type, startAt, endAt])
}

model LaundryOrder {
  id            String       @id @default(uuid())
  reservationId String?
  houseId       String?
  roomId        String?
  itemName      String
  itemType      String
  quantityDelivered Int
  quantityReturned Int
  status        LaundryStatus
  provider      String
  scheduledAt   DateTime?
  completedAt   DateTime?
  reservation   Reservation? @relation(fields: [reservationId], references: [id])
  house         House?       @relation(fields: [houseId], references: [id])
  room          Room?        @relation(fields: [roomId], references: [id])
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  @@index([status])
  @@index([houseId])
  @@index([roomId])
}

model User {
  id        String   @id @default(uuid())
  name      String
  email     String   @unique
  password  String
  roleId    String
  role      Role     @relation(fields: [roleId], references: [id])
  auditLogs AuditLog[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Role {
  id        String   @id @default(uuid())
  name      RoleName @unique
  users     User[]
}

model AuditLog {
  id            String   @id @default(uuid())
  action        String
  entity        String
  entityId      String
  before        Json?
  after         Json?
  reservationId String?
  userId        String
  user          User     @relation(fields: [userId], references: [id])
  reservation   Reservation? @relation(fields: [reservationId], references: [id])
  createdAt     DateTime @default(now())

  @@index([entity, entityId])
}
